manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    lab: k8s-microservice
